fix overflow and banner color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1014,6 +1014,7 @@ body {
 }
 
 body {
+  overflow-x:hidden;
   line-height: 1.66;
   font-size: 0.9375rem;
   font-style: normal;
@@ -4841,6 +4842,9 @@ only screen and (max-width: 767px) {
 @media (max-width: 1200px) {
   .header-text-info-wrapper__icon i {
     font-size: calc(1.35625rem + 1.275vw);
+  }
+  .header-top-area{
+    display: none;
   }
 }
 
@@ -19753,7 +19757,8 @@ only screen and (max-width: 767px) {
   height: 40%;
   width: auto;
   z-index: 99;
-  left: -14%;
+  left: 0%;
+  transform: translateX(-43%);
   bottom: -12.5%;
   -webkit-animation: pop_out 1s;
   -o-animation: pop_out 1s;
@@ -19763,8 +19768,8 @@ only screen and (max-width: 767px) {
 .L-HOME-GREEN {
   position: absolute;
   height: 38%;
-  right: -10%;
-  margin-top: 31%;
+  right: 0%;
+  transform: translate(33%, 175%);
   -webkit-animation: pop_out 1s;
   -o-animation: pop_out 1s;
   animation: pop_out 1s;
@@ -19775,8 +19780,8 @@ only screen and (max-width: 767px) {
   height: 36%;
   width: auto;
   z-index: 99;
-  left: -11%;
-  margin-top: 3%;
+  left: 0%;
+  transform: translate(-36%);
   -webkit-animation: pop_out 1s;
   -o-animation: pop_out 1s;
   animation: pop_out 1s;
@@ -19785,20 +19790,23 @@ only screen and (max-width: 767px) {
 .E-HOME-WHITE {
   position: absolute;
   height: 45%;
-  right: -12%;
-  margin-top: -18%;
+  right: 0%;
+  transform: translate(39%, -37%);
   -webkit-animation: pop_out 1s;
   -o-animation: pop_out 1s;
   animation: pop_out 1s;
 }
-
+.content-container {
+  position: relative; /* Make sure the ballize can be positioned relative to this container */
+  overflow: hidden; /* Prevent horizontal scrolling */
+}
 .A-HOME-GREEN {
   position: absolute;
   height: 34%;
   width: auto;
   z-index: 99;
-  left: -14%;
-  margin-top: -12%;
+  left: 0%;
+  transform: translate(-42%, -66%);
   -webkit-animation: pop_out 1s;
   -o-animation: pop_out 1s;
   animation: pop_out 1s;
@@ -19823,7 +19831,8 @@ only screen and (max-width: 767px) {
   height: 40%;
   width: auto;
   z-index: 99;
-  left: -12%;
+  left: 0%;
+  transform: translateX(-12%);
   margin-top: 38%;
   -webkit-animation: pop_out 1s;
   -o-animation: pop_out 1s;
@@ -19931,7 +19940,7 @@ only screen and (max-width: 767px) {
 }
 
 .margi {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .devis-button {
@@ -20018,7 +20027,6 @@ only screen and (max-width: 767px) {
 
 .classy {
   border-radius: 1rem;
-  margin-left: 10%;
 }
 
 .grey-bg {
@@ -20052,7 +20060,14 @@ only screen and (max-width: 767px) {
 .grow:hover{
   animation: scale .2s linear;
     animation-fill-mode: forwards;
-    transform-origin: 50% 50%;
+    transform-origin: scale(1.1);
     box-shadow: 1px 1px 33px 19px rgb(15 139 98 / 8%);
 
+}
+.custom-size{
+  width: 110%;
+  height: 100%;
+}
+.industry-grid-s{
+  width: 260px; margin-right: 30px;
 }
